--- a/SIENI/SIENI-web/src/main/webapp/view/formato/gestionCurso/gestionArchivosMultimedia/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/gestionCurso/gestionArchivosMultimedia/index.xhtml
@@ -36,7 +36,7 @@
                             #{formatoPantallas.campo15}
                         </p:column>
                         <p:column headerText="Acciones">
-                            <i class="icon-list Fs25 Red" style="cursor: pointer" title="Ver Archivo Multimedia"></i>
+                            <i class="icon-visibility1 Fs25 Red" style="cursor: pointer" title="Ver Archivo Multimedia"></i>
                             <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Archivo Multimedia"></i>
                             <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Archivo Multimedia"></i>
                         </p:column>
@@ -135,7 +135,9 @@
                 </h:form>
             </p:tab>
             <p:tab title="Ver Archivo Multimedia">
-
+                <i class="fa fa-file-movie-o Fs25"></i>
+                <i class="fa fa-file-image-o Fs25"></i>
+                <i class="fa fa-file-audio-o Fs25"></i>
             </p:tab>
         </p:tabView>
     </ui:define>
