--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/index.xhtml
@@ -32,12 +32,15 @@
                                  rowsPerPageTemplate="5,10,15"
                                  reflow="true">
                         <p:column headerText="Año" filterBy="#{car.aeAnio}" filterMatchMode="contains" filterable="true">
-                            #{formatoPantallas.anio}
+                            <h:outputText value="#{car.aeAnio}" >
+                                <f:convertNumber pattern="0,000" />
+                            </h:outputText>
                         </p:column>
-                        <p:column headerText="Fecha Inicio" filterBy="#{dateUtils.getFormatDate(car.aeInicio)}" filterMatchMode="contains" filterable="true">
-                            #{dateUtils.getFormatDate(car.aeInicio)}                 </p:column>
-                        <p:column headerText="Fecha Fin" filterBy="#{dateUtils.getFormatDate(car.aeFin)}" filterMatchMode="contains" filterable="true">
-                            #{dateUtils.getFormatDate(car.aeFin)}
+                        <p:column headerText="Fecha Inicio" filterBy="#{dateUtils.getFormatedDate(car.aeInicio)}" filterMatchMode="contains" filterable="true">
+                            #{dateUtils.getFormatedDate(car.aeInicio)}
+                        </p:column>
+                        <p:column headerText="Fecha Fin" filterBy="#{dateUtils.getFormatedDate(car.aeFin)}" filterMatchMode="contains" filterable="true">
+                            #{dateUtils.getFormatedDate(car.aeFin)}
                         </p:column>
                         <p:column headerText="Estado" filterBy="#{car.aeEstado}" filterMatchMode="contains" filterable="true">
                             #{car.aeEstado}
@@ -65,13 +68,13 @@
                     <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive" id="p1">
                         <p:outputLabel for="anio" value="Año: " class=" Responsive"></p:outputLabel>
-                        <p:inputText id="anio" value="#{gestionarAnioEscolarController.anioEscolarNuevo.aeAnio}" converter=""></p:inputText>
+                        <p:inputText id="anio" value="#{gestionarAnioEscolarController.anioEscolarNuevo.aeAnio}"></p:inputText>
                         <p:outputLabel  for="fInicio" value="Fecha de inicio: " class=" Responsive"></p:outputLabel>
-                        <p:calendar id="fInicio" value="#{gestionarAnioEscolarController.anioEscolarNuevo.aeInicio}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/mm/yyyy" required="true" requiredMessage="Debe ingresar fecha de nacimiento" placeholder="dd/mm/yyyy" yearRange="c-20:c+0" navigator="true"></p:calendar>
+                        <p:calendar id="fInicio" value="#{gestionarAnioEscolarController.anioEscolarNuevo.aeInicio}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de inicio" placeholder="dd/mm/yyyy" yearRange="c-20:c+0" navigator="true"></p:calendar>
                     </p:panelGrid>
                     <p:panelGrid columns="2" class="Container50 Responsive" id="p2">
                         <p:outputLabel for="fFin" value="Fecha de Fin: " class=" Responsive" ></p:outputLabel>            
-                        <p:calendar id="fFin" value="#{gestionarAnioEscolarController.anioEscolarNuevo.aeFin}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/mm/yyyy" required="true" requiredMessage="Debe ingresar fecha de nacimiento" placeholder="dd/mm/yyyy" yearRange="c-20:c+0" navigator="true"></p:calendar>
+                        <p:calendar id="fFin" value="#{gestionarAnioEscolarController.anioEscolarNuevo.aeFin}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaFinAnioActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de fin" placeholder="dd/mm/yyyy" yearRange="c-20:c+0" navigator="true"></p:calendar>
                         <p:outputLabel for="estado" value="Estado: " class="  Responsive"></p:outputLabel>
                         <p:selectOneMenu id="estado" class=" Responsive"  value="#{gestionarAnioEscolarController.anioEscolarNuevo.aeEstado}" >
                             <f:selectItem itemValue ="1" itemLabel="Activo"/>
@@ -108,13 +111,13 @@
                     <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive" id="mod_p1">
                         <p:outputLabel for="mod_anio" value="Año: " class=" Responsive"></p:outputLabel>
-                        <p:inputText id="mod_anio" value="#{gestionarAnioEscolarController.anioEscolarModifica.aeAnio}" converter=""></p:inputText>
+                        <p:inputText id="mod_anio" value="#{gestionarAnioEscolarController.anioEscolarModifica.aeAnio}"></p:inputText>
                         <p:outputLabel  for="mod_fInicio" value="Fecha de inicio: " class=" Responsive"></p:outputLabel>
-                        <p:calendar id="mod_fInicio" value="#{gestionarAnioEscolarController.anioEscolarModifica.aeInicio}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/mm/yyyy" required="true" requiredMessage="Debe ingresar fecha de nacimiento" placeholder="dd/mm/yyyy" yearRange="c-20:c+0" navigator="true"></p:calendar>
+                        <p:calendar id="mod_fInicio" value="#{gestionarAnioEscolarController.anioEscolarModifica.aeInicio}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de inicio" placeholder="dd/mm/yyyy" yearRange="c-20:c+0" navigator="true"></p:calendar>
                     </p:panelGrid>
                     <p:panelGrid columns="2" class="Container50 Responsive" id="mod_p2">
                         <p:outputLabel for="mod_fFin" value="Fecha de Fin: " class=" Responsive" ></p:outputLabel>            
-                        <p:calendar id="mod_fFin" value="#{gestionarAnioEscolarController.anioEscolarModifica.aeFin}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/mm/yyyy" required="true" requiredMessage="Debe ingresar fecha de nacimiento" placeholder="dd/mm/yyyy" yearRange="c-20:c+0" navigator="true"></p:calendar>
+                        <p:calendar id="mod_fFin" value="#{gestionarAnioEscolarController.anioEscolarModifica.aeFin}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaFinAnioActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de fin" placeholder="dd/mm/yyyy" yearRange="c-20:c+0" navigator="true"></p:calendar>
                         <p:outputLabel for="mod_estado" value="Estado: " class="  Responsive"></p:outputLabel>
                         <p:selectOneMenu id="mod_estado" class=" Responsive"  value="#{gestionarAnioEscolarController.anioEscolarModifica.aeEstado}" >
                             <f:selectItem itemValue ="1" itemLabel="Activo"/>
@@ -123,7 +126,7 @@
                     </p:panelGrid>
                     <div class="EmptyBox20"></div>
                     <div class="Container100 Responsive">
-                        <p:commandButton value="Guardar" action="#{gestionarAnioEscolarController.guardar()}" update="mod_p1,mod_p2,tabMenu" />
+                        <p:commandButton value="Guardar" action="#{gestionarAnioEscolarController.guardarModifica()}" update="mod_p1,mod_p2,tabMenu" />
                         <p:commandButton value="Limpiar" immediate="true">
                             <p:ajax update="mod_p1,mod_p2" resetValues="true" />
                         </p:commandButton>
