--- a/SIENI/SIENI-web/src/main/webapp/view/formato/rpt/rendimientoAlumno/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/rpt/rendimientoAlumno/index.xhtml
@@ -21,8 +21,24 @@
                     </p:dialog>
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
-                    <p:outputLabel value="Año"></p:outputLabel>
-                    <p:inputText value="#{formatoPantallas.anio2}"></p:inputText>
+                    <p:panelGrid columns="4">
+                        <p:outputLabel value="Fecha desde:"></p:outputLabel>
+                        <p:inputText value="#{formatoPantallas.fecha}"></p:inputText>
+                        <p:outputLabel value="hasta:"></p:outputLabel>
+                        <p:inputText value="#{formatoPantallas.fecha}"></p:inputText>
+                        <p:outputLabel value="Grado:"></p:outputLabel>
+                        <p:selectOneMenu >
+                            <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo30}"></f:selectItem>
+                        </p:selectOneMenu>
+                        <p:outputLabel value="Seccion:"></p:outputLabel>
+                        <p:selectOneMenu >
+                            <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo30}"></f:selectItem>
+                        </p:selectOneMenu>
+                        <p:outputLabel value="Materia:"></p:outputLabel>
+                        <p:selectOneMenu >
+                            <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo100}"></f:selectItem>
+                        </p:selectOneMenu>
+                    </p:panelGrid>
                     <div class="EmptyBox20"></div>
                     <p:dataTable id="rendimiento" rows="10" var="car" value="#{clasesForm.plantillas}" 
                                  paginator="false"
@@ -30,18 +46,21 @@
                                  rowsPerPageTemplate="5,10,15"
                                  reflow="true"
                                  >
-                        
+
                         <p:column headerText="Grado"  filterMatchMode="contains" filterable="true">
                             #{formatoPantallas.campo30}
                         </p:column>
-                        <p:column headerText="Materia"  filterMatchMode="contains" filterable="true">
-                            #{formatoPantallas.campo50}
+                        <p:column headerText="Seccion"  filterMatchMode="contains" filterable="true">
+                            #{formatoPantallas.campo30}
                         </p:column>
-                        <p:column headerText="Alumno"  filterMatchMode="contains" filterable="true">
+                        <p:column headerText="Materia"  filterMatchMode="contains" filterable="true">
                             #{formatoPantallas.campo100}
                         </p:column>
+                        <p:column headerText="Alumnos"  filterMatchMode="contains" filterable="true">
+                            #{formatoPantallas.numero3}
+                        </p:column>
                         <p:column headerText="Tipo de Evaluacion"  filterMatchMode="contains" filterable="true">
-                            #{formatoPantallas.campo50}
+                            #{formatoPantallas.campo30}
                         </p:column>
                         <p:column headerText="%Aprobados"  filterMatchMode="contains" filterable="true">
                             #{formatoPantallas.porcentaje}
@@ -52,30 +71,30 @@
                         <p:column headerText="Promedio"  filterMatchMode="contains" filterable="true">
                             #{formatoPantallas.numeroDecimal}
                         </p:column>
-            <f:facet name="footer">
+                        <f:facet name="footer">
                             Total de alumnos 999
                         </f:facet>
                     </p:dataTable>
                     <div class="EmptyBox20"></div>
                     <div class="TexAlCenter">
-                        
+
                         <h:panelGrid columns="4" class="TexAlCenter" style="margin-bottom:10px" cellpadding="5">
-                        <p:outputLabel value="Exportar a:"></p:outputLabel>
+                            <p:outputLabel value="Exportar a:"></p:outputLabel>
                             <p:selectOneRadio  id="console" value="#{radioView.console}">
-                            <f:selectItem itemLabel="Excel" itemValue="Excel" />
-                            <f:selectItem itemLabel="PDF" itemValue="PDF" />
-                        </p:selectOneRadio>
-                        <p:commandButton  value="Generar"></p:commandButton>
-                        <p:commandButton value="Regresar"></p:commandButton>
+                                <f:selectItem itemLabel="Excel" itemValue="Excel" />
+                                <f:selectItem itemLabel="PDF" itemValue="PDF" />
+                            </p:selectOneRadio>
+                            <p:commandButton  value="Generar"></p:commandButton>
+                            <p:commandButton value="Refrescar"></p:commandButton>
                         </h:panelGrid>
                     </div>
                 </h:form>
-               
-                    
-                    
+
+
+
             </p:tab>
-            
-            
+
+
         </p:tabView>
     </ui:define>
 </ui:composition>
