--- a/SIENI/SIENI-web/src/main/webapp/view/formato/rpt/reporteMatricula/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/rpt/reporteMatricula/index.xhtml
@@ -22,8 +22,10 @@
                     </p:dialog>
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
-                    <p:outputLabel value="Año"></p:outputLabel>
-                    <p:inputText value="#{formatoPantallas.anio2}"></p:inputText>
+                    <p:panelGrid columns="4">
+                        <p:outputLabel value="Año Escolar:"></p:outputLabel>
+                        <p:inputText value="#{formatoPantallas.anio2}"></p:inputText>
+                    </p:panelGrid>
                     <div class="EmptyBox20"></div>
                     <p:dataTable rows="10" var="car" value="#{clasesForm.plantillas}" 
                                  paginator="false"
@@ -41,13 +43,13 @@
                             #{formatoPantallas.carnet}
                         </p:column>
                         <p:column headerText="Alumno" >
-                            #{formatoPantallas.campo100}
+                            #{formatoPantallas.campo300}
                         </p:column>
                         <p:column headerText="grado" >
-                            #{formatoPantallas.campo15}
+                            #{formatoPantallas.campo30}
                         </p:column>
                         <p:column headerText="seccion" >
-                            #{formatoPantallas.campo15}
+                            #{formatoPantallas.campo30}
                         </p:column>
                         <f:facet name="footer">
                             Total de alumnos 999
@@ -63,7 +65,7 @@
                                 <f:selectItem itemLabel="PDF" itemValue="PDF" />
                             </p:selectOneRadio>
                             <p:commandButton  value="Generar"></p:commandButton>
-                            <p:commandButton value="Regresar"></p:commandButton>
+                            <p:commandButton value="Refrescar"></p:commandButton>
                         </h:panelGrid>
                     </div>
 
