--- a/SIENI/SIENI-web/src/main/webapp/view/formato/rpt/reporteNotasAlumnoAnioEscolar/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/rpt/reporteNotasAlumnoAnioEscolar/index.xhtml
@@ -22,13 +22,12 @@
                     </p:dialog>
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
-                    <p:outputLabel value="Año"></p:outputLabel>
-                    <p:inputText value="#{formatoPantallas.anio2}"></p:inputText>
-                    <div class="EmptyBox20"></div>
-                    <p:outputLabel value="Fecha desde"></p:outputLabel>
-                    <p:inputText value="#{formatoPantallas.fecha}"></p:inputText>
-                    <p:outputLabel value="hasta:"></p:outputLabel>
-                    <p:inputText value="#{formatoPantallas.fecha}"></p:inputText>
+                    <p:panelGrid columns="4">
+                        <p:outputLabel value="Fecha desde"></p:outputLabel>
+                        <p:inputText value="#{formatoPantallas.fecha}"></p:inputText>
+                        <p:outputLabel value="hasta:"></p:outputLabel>
+                        <p:inputText value="#{formatoPantallas.fecha}"></p:inputText>
+                    </p:panelGrid>
                     <div class="EmptyBox20"></div>
                     <p:dataTable rows="10" var="car" value="#{clasesForm.plantillas}" 
                                  paginator="false"
@@ -42,40 +41,36 @@
                         <p:column headerText="Grado" >
                             #{formatoPantallas.campo30}
                         </p:column>
-                        <p:column headerText="Materia" >
-                            #{formatoPantallas.campo50}
+                        <p:column headerText="Seccion" >
+                            #{formatoPantallas.campo30}
                         </p:column>
                         <p:column headerText="Materia" >
-                            #{formatoPantallas.campo50}
+                            #{formatoPantallas.campo100}
                         </p:column>
-                        
                         <p:column headerText="Tipo de Evaluacion" >
-                            #{formatoPantallas.campo50}
+                            #{formatoPantallas.campo30}
                         </p:column>
                         <p:column headerText="Evaluacion" >
-                            #{formatoPantallas.campo15}
+                            #{formatoPantallas.campo100}
                         </p:column>
-                        <p:column headerText="Nota ">
+                        <p:column headerText="Nota">
                             #{formatoPantallas.numeroDecimal}
                         </p:column>
-                        
-
-                        
                         <f:facet name="footer">
                             Total de alumnos 999
                         </f:facet>
                     </p:dataTable>
                     <div class="EmptyBox20"></div>
                     <div class="TexAlCenter">
-                        
+
                         <h:panelGrid columns="4" class="TexAlCenter" style="margin-bottom:10px" cellpadding="5">
-                        <p:outputLabel value="Exportar a:"></p:outputLabel>
+                            <p:outputLabel value="Exportar a:"></p:outputLabel>
                             <p:selectOneRadio  id="console" value="#{radioView.console}">
-                            <f:selectItem itemLabel="Excel" itemValue="Excel" />
-                            <f:selectItem itemLabel="PDF" itemValue="PDF" />
-                        </p:selectOneRadio>
-                        <p:commandButton  value="Generar"></p:commandButton>
-                        <p:commandButton value="Regresar"></p:commandButton>
+                                <f:selectItem itemLabel="Excel" itemValue="Excel" />
+                                <f:selectItem itemLabel="PDF" itemValue="PDF" />
+                            </p:selectOneRadio>
+                            <p:commandButton  value="Generar"></p:commandButton>
+                            <p:commandButton value="Refrescar"></p:commandButton>
                         </h:panelGrid>
                     </div>
 
