--- a/SIENI/SIENI-web/src/main/webapp/view/formato/rpt/reporteParticipacionClases/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/rpt/reporteParticipacionClases/index.xhtml
@@ -22,17 +22,18 @@
                     </p:dialog>
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
-                    <p:outputLabel value="Fecha desde"></p:outputLabel>
-                    <p:inputText value="#{formatoPantallas.fecha}"></p:inputText>
-                    <p:outputLabel value="hasta:"></p:outputLabel>
-                    <p:inputText value="#{formatoPantallas.fecha}"></p:inputText>
+                    <p:panelGrid columns="4">
+                        <p:outputLabel value="Fecha desde"></p:outputLabel>
+                        <p:inputText value="#{formatoPantallas.fecha}"></p:inputText>
+                        <p:outputLabel value="hasta:"></p:outputLabel>
+                        <p:inputText value="#{formatoPantallas.fecha}"></p:inputText>
+                    </p:panelGrid>
                     <div class="EmptyBox20"></div>
                     <p:dataTable rows="10" var="car" value="#{clasesForm.plantillas}" 
                                  paginator="false"
                                  paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                  rowsPerPageTemplate="5,10,15"
                                  reflow="true">
-
                         <p:column headerText="Alumno" >
                             #{formatoPantallas.campo100}
                         </p:column>
@@ -48,27 +49,22 @@
                         <p:column headerText="% Participacion" >
                             #{formatoPantallas.porcentaje}
                         </p:column>
-                        
-
-                        
                         <f:facet name="footer">
-                            Promedio de Particioacion de Clases #{formatoPantallas.porcentaje}
+                            Promedio Total de Particioacion de Clases #{formatoPantallas.porcentaje}
                         </f:facet>
                     </p:dataTable>
                     <div class="EmptyBox20"></div>
                     <div class="TexAlCenter">
-                        
                         <h:panelGrid columns="4" class="TexAlCenter" style="margin-bottom:10px" cellpadding="5">
-                        <p:outputLabel value="Exportar a:"></p:outputLabel>
+                            <p:outputLabel value="Exportar a:"></p:outputLabel>
                             <p:selectOneRadio  id="console" value="#{radioView.console}">
-                            <f:selectItem itemLabel="Excel" itemValue="Excel" />
-                            <f:selectItem itemLabel="PDF" itemValue="PDF" />
-                        </p:selectOneRadio>
-                        <p:commandButton  value="Generar"></p:commandButton>
-                        <p:commandButton value="Regresar"></p:commandButton>
+                                <f:selectItem itemLabel="Excel" itemValue="Excel" />
+                                <f:selectItem itemLabel="PDF" itemValue="PDF" />
+                            </p:selectOneRadio>
+                            <p:commandButton  value="Generar"></p:commandButton>
+                            <p:commandButton value="Refrescar"></p:commandButton>
                         </h:panelGrid>
                     </div>
-
                 </h:form>
             </p:tab>
 
