--- a/SIENI/SIENI-web/src/main/webapp/view/formato/rpt/reporteUsuarios/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/rpt/reporteUsuarios/index.xhtml
@@ -22,8 +22,10 @@
                     </p:dialog>
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
-                    <p:outputLabel value="Año"></p:outputLabel>
-                    <p:inputText value="#{formatoPantallas.anio2}"></p:inputText>
+                    <p:panelGrid columns="4">
+                        <p:outputLabel value="Año Escolar:"></p:outputLabel>
+                        <p:inputText value="#{formatoPantallas.anio2}"></p:inputText>
+                    </p:panelGrid>
                     <div class="EmptyBox20"></div>
                     <p:dataTable rows="10" var="car" value="#{clasesForm.plantillas}" 
                                  paginator="false"
@@ -35,7 +37,7 @@
                             #{formatoPantallas.campo30}
                         </p:column>
                         <p:column headerText="Nombre" >
-                            #{formatoPantallas.campo100}
+                            #{formatoPantallas.campo300}
                         </p:column>
                         <p:column headerText="Tipo de usuario" >
                             #{formatoPantallas.campo15}
@@ -43,9 +45,6 @@
                         <p:column headerText="Tipo de permiso" >
                             #{formatoPantallas.campo15}
                         </p:column>
-
-
-
                         <f:facet name="footer">
                             Total de Usuarios 999
                         </f:facet>
@@ -61,7 +60,7 @@
                                 <f:selectItem itemLabel="PDF" itemValue="PDF" />
                             </p:selectOneRadio>
                             <p:commandButton  value="Generar"></p:commandButton>
-                            <p:commandButton value="Regresar"></p:commandButton>
+                            <p:commandButton value="Refrescar"></p:commandButton>
                         </h:panelGrid>
                     </div>
 
