--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteDocentes/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteDocentes/index.xhtml
@@ -22,8 +22,10 @@
                     </p:dialog>
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
-                    <p:outputLabel value="Año"></p:outputLabel>
-                    <p:inputText value="#{formatoPantallas.anio2}"></p:inputText>
+                    <p:panelGrid columns="4">
+                        <p:outputLabel value="Año Escolar:"></p:outputLabel>
+                        <p:inputText value="#{formatoPantallas.anio2}"></p:inputText>
+                    </p:panelGrid>
                     <div class="EmptyBox20"></div>
                     <p:dataTable rows="10" var="car" value="#{clasesForm.plantillas}" 
                                  paginator="false"
@@ -31,37 +33,31 @@
                                  rowsPerPageTemplate="5,10,15"
                                  reflow="true">
 
-                        <p:column headerText="Nombre" >
-                            #{formatoPantallas.campo50}
-                        </p:column>
-                        <p:column headerText="Apellido" >
-                            #{formatoPantallas.campo50}
-                        </p:column>
-                        <p:column headerText="Turno" >
-                            #{formatoPantallas.campo10}
+                        <p:column headerText="Docente" >
+                            #{formatoPantallas.campo300}
                         </p:column>
                         <p:column headerText="Materias Asignadas" >
                             #{formatoPantallas.campo50}
                         </p:column>
-                        
-
-                        
+                        <p:column headerText="Clases impartidas" >
+                            #{formatoPantallas.numero3}
+                        </p:column>
                         <f:facet name="footer">
                             Total de Docentes 999
                         </f:facet>
                     </p:dataTable>
-                    
+
                     <div class="EmptyBox20"></div>
                     <div class="TexAlCenter">
-                        
+
                         <h:panelGrid columns="4" class="TexAlCenter" style="margin-bottom:10px" cellpadding="5">
-                        <p:outputLabel value="Exportar a:"></p:outputLabel>
+                            <p:outputLabel value="Exportar a:"></p:outputLabel>
                             <p:selectOneRadio  id="console" value="#{radioView.console}">
-                            <f:selectItem itemLabel="Excel" itemValue="Excel" />
-                            <f:selectItem itemLabel="PDF" itemValue="PDF" />
-                        </p:selectOneRadio>
-                        <p:commandButton  value="Generar"></p:commandButton>
-                        <p:commandButton value="Regresar"></p:commandButton>
+                                <f:selectItem itemLabel="Excel" itemValue="Excel" />
+                                <f:selectItem itemLabel="PDF" itemValue="PDF" />
+                            </p:selectOneRadio>
+                            <p:commandButton  value="Generar"></p:commandButton>
+                            <p:commandButton value="Refrescar"></p:commandButton>
                         </h:panelGrid>
                     </div>
 
