--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteEstadisticoAvanceAlumnos/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteEstadisticoAvanceAlumnos/index.xhtml
@@ -9,7 +9,6 @@
             <p:menuitem value="Home" url="/"/>
             <p:menuitem value="Reportes" url="#"/>
             <p:menuitem value="Reporte Estadistico de Avance por Alumno" url="#{siteUrls.reporteEstadisticoAvanceAlumno}"/>
-
             <p:separator />
         </p:breadCrumb>
     </ui:define>
@@ -22,33 +21,50 @@
                     </p:dialog>
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
-                    <p:outputLabel value="Fecha desde"></p:outputLabel>
-                    <p:inputText value="#{formatoPantallas.fecha}"></p:inputText>
-                    <p:outputLabel value="hasta:"></p:outputLabel>
-                    <p:inputText value="#{formatoPantallas.fecha}"></p:inputText>
+                    <p:panelGrid columns="4">
+                        <p:outputLabel value="Fecha desde:"></p:outputLabel>
+                        <p:inputText value="#{formatoPantallas.fecha}"></p:inputText>
+                        <p:outputLabel value="hasta:"></p:outputLabel>
+                        <p:inputText value="#{formatoPantallas.fecha}"></p:inputText>
+                        <p:outputLabel value="Grado:"></p:outputLabel>
+                        <p:selectOneMenu >
+                            <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo30}"></f:selectItem>
+                        </p:selectOneMenu>
+                        <p:outputLabel value="Seccion:"></p:outputLabel>
+                        <p:selectOneMenu >
+                            <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo30}"></f:selectItem>
+                        </p:selectOneMenu>
+                        <p:outputLabel value="Materia:"></p:outputLabel>
+                        <p:selectOneMenu >
+                            <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo100}"></f:selectItem>
+                        </p:selectOneMenu>
+                        <p:outputLabel value="Alumno:"></p:outputLabel>
+                        <p:selectOneMenu >
+                            <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo300}"></f:selectItem>
+                        </p:selectOneMenu>
+                    </p:panelGrid>
                     <div class="EmptyBox20"></div>
                     <p:dataTable rows="10" var="car" value="#{clasesForm.plantillas}" 
                                  paginator="false"
                                  paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                  rowsPerPageTemplate="5,10,15"
                                  reflow="true">
-
                         <p:column headerText="Grado" >
                             #{formatoPantallas.campo30}
                         </p:column>
+                        <p:column headerText="Seccion" >
+                            #{formatoPantallas.campo30}
+                        </p:column>
                         <p:column headerText="Materia" >
-                            #{formatoPantallas.campo50}
+                            #{formatoPantallas.campo100}
                         </p:column>
                         <p:column headerText="Alumno" >
-                            #{formatoPantallas.campo100}
+                            #{formatoPantallas.campo300}
                         </p:column>
                         <p:column headerText="Tipo de Evaluacion" >
                             #{formatoPantallas.campo50}
                         </p:column>
                         <p:column headerText="% Terminado" >
-                            #{formatoPantallas.porcentaje}
-                        </p:column>
-                        <p:column headerText="% No Terminado ">
                             #{formatoPantallas.porcentaje}
                         </p:column>
                         <p:column headerText="Promedio" >
@@ -57,30 +73,24 @@
                         <p:column headerText="Varianza" >
                             #{formatoPantallas.numeroDecimal}
                         </p:column>
-
-                        
                         <f:facet name="footer">
                             Total de alumnos 999
                         </f:facet>
                     </p:dataTable>
                     <div class="EmptyBox20"></div>
                     <div class="TexAlCenter">
-                        
                         <h:panelGrid columns="4" class="TexAlCenter" style="margin-bottom:10px" cellpadding="5">
-                        <p:outputLabel value="Exportar a:"></p:outputLabel>
+                            <p:outputLabel value="Exportar a:"></p:outputLabel>
                             <p:selectOneRadio  id="console" value="#{radioView.console}">
-                            <f:selectItem itemLabel="Excel" itemValue="Excel" />
-                            <f:selectItem itemLabel="PDF" itemValue="PDF" />
-                        </p:selectOneRadio>
-                        <p:commandButton  value="Generar"></p:commandButton>
-                        <p:commandButton value="Regresar"></p:commandButton>
+                                <f:selectItem itemLabel="Excel" itemValue="Excel" />
+                                <f:selectItem itemLabel="PDF" itemValue="PDF" />
+                            </p:selectOneRadio>
+                            <p:commandButton  value="Generar"></p:commandButton>
+                            <p:commandButton value="Refrescar"></p:commandButton>
                         </h:panelGrid>
                     </div>
-
                 </h:form>
             </p:tab>
-
         </p:tabView>
     </ui:define>
-
 </ui:composition>
